- support `tag` editing with backward compatibility  - prevent horizontal scrolling in ldpe panel of ldpp

--- a/src/ldpp.styl
+++ b/src/ldpp.styl
@@ -53,6 +53,7 @@ for num in (1..3)
   width: 100%
   height: 100%
   overflow-y: scroll
+  overflow-x: hidden
   overscroll-behavior: contain
   &.active
     display: block
